Overflow on next/prev question animation fixed

--- a/flashcards-app/src/components/App/App.css
+++ b/flashcards-app/src/components/App/App.css
@@ -21,6 +21,7 @@
 body {
   touch-action: manipulation;
   background-color: var(--bg-clr);
+  overflow: hidden;
 }
 
 .title {
